# backend/docs/swagger.json
@@ -1362,6 +1362,53 @@
                 }
             }
         },
+        "/v1/tree/planting-years": {
+            "get": {
+                "security": [
+                    {
+                        "Keycloak": []
+                    }
+                ],
+                "description": "Retrieves a list of all distinct planting years from trees in the database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tree"
+                ],
+                "summary": "Get distinct planting years",
+                "operationId": "get-planting-years",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/tree/sensor/{sensor_id}": {
             "get": {
                 "security": [
