# backend/internal/server/http/handler/v1/tree/routes.go
@@ -7,6 +7,7 @@ import (
 
 func RegisterRoutes(r fiber.Router, svc service.TreeService) {
 	r.Get("/", GetAllTrees(svc))
+	r.Get("/planting-years", GetPlantingYears(svc))
 	r.Get("/:id", GetTreeByID(svc))
 	r.Put("/:id", UpdateTree(svc))
 	r.Post("/", CreateTree(svc))
